route POST adding new argonaute

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -6,9 +6,9 @@
     
     <!-- New member form -->
     <h2>Ajouter un(e) Argonaute</h2>
-    <form class="new-member-form">
+    <form action="/addArgonaute" class="new-member-form" method="POST">
       <label for="name">Nom de l&apos;Argonaute</label>
-      <input id="name" name="name" type="text" placeholder="Charalampos" />
+       <input id="name" name="name" type="text" placeholder="Argonaute" value=<%= locals.fields ? locals.fields.name : '' %>>
       <button type="submit">Envoyer</button>
     </form>
     
