--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -42,8 +42,15 @@ label {
   text-align: center;
 }
 
+.member-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 .member-item {
   padding: 0.25em 0;
+  width: 33%;
 }
 
 ul {
